[gd_scene load_steps=22 format=3 uid="uid://b0atsrm3x32o8"]

[ext_resource type="Script" uid="uid://diwriuq84srxm" path="res://scripts/cult_memb_1.gd" id="1_wmitl"]
[ext_resource type="Texture2D" uid="uid://bwlmskaaxye53" path="res://assests/CartoonDetective/clocked.png" id="2_tgsvk"]
[ext_resource type="Texture2D" uid="uid://dt2ot4t04qgm4" path="res://assests/CartoonDetective/Run/Run_01.png" id="6_aehro"]
[ext_resource type="Texture2D" uid="uid://buoonhi8i2hu2" path="res://assests/CartoonDetective/Run/Run_02.png" id="7_qthoe"]
[ext_resource type="Texture2D" uid="uid://0kqrmywxwjcm" path="res://assests/CartoonDetective/Run/Run_03.png" id="8_ge4ge"]
[ext_resource type="Texture2D" uid="uid://do0lb2451xdq3" path="res://assests/CartoonDetective/Run/Run_04.png" id="9_6jtew"]
[ext_resource type="Texture2D" uid="uid://22cvp3ipjope" path="res://assests/CartoonDetective/Run/Run_05.png" id="10_2txkc"]
[ext_resource type="Texture2D" uid="uid://cglfexqs52ejv" path="res://assests/CartoonDetective/Run/Run_06.png" id="11_bjj2m"]
[ext_resource type="Texture2D" uid="uid://smhcqqkuxg0c" path="res://assests/CartoonDetective/Run/Run_07.png" id="12_kckad"]
[ext_resource type="Texture2D" uid="uid://dl0kfovxcgmnm" path="res://assests/CartoonDetective/Run/Run_08.png" id="13_oqsb5"]
[ext_resource type="Texture2D" uid="uid://cuyf6mp13xw7d" path="res://assests/CartoonDetective/Shoot/Shoot_01.png" id="14_dsebc"]
[ext_resource type="Texture2D" uid="uid://fi2lho71gubw" path="res://assests/CartoonDetective/Shoot/Shoot_02.png" id="15_b1ti7"]
[ext_resource type="Texture2D" uid="uid://c6tvnifbj3yfl" path="res://assests/CartoonDetective/Shoot/Shoot_03.png" id="16_a8r7m"]
[ext_resource type="Texture2D" uid="uid://djfe4iu24yjar" path="res://assests/CartoonDetective/Shoot/Shoot_04.png" id="17_hak8v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w8l37"]
atlas = ExtResource("2_tgsvk")
region = Rect2(0, 0, 24, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qx8t"]
atlas = ExtResource("2_tgsvk")
region = Rect2(24, 0, 24, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_aehro"]
atlas = ExtResource("2_tgsvk")
region = Rect2(48, 0, 24, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_qthoe"]
atlas = ExtResource("2_tgsvk")
region = Rect2(72, 0, 24, 39)

[sub_resource type="SpriteFrames" id="SpriteFrames_qjcc1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8l37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qx8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aehro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qthoe")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_aehro")
}, {
"duration": 1.0,
"texture": ExtResource("7_qthoe")
}, {
"duration": 1.0,
"texture": ExtResource("8_ge4ge")
}, {
"duration": 1.0,
"texture": ExtResource("9_6jtew")
}, {
"duration": 1.0,
"texture": ExtResource("10_2txkc")
}, {
"duration": 1.0,
"texture": ExtResource("11_bjj2m")
}, {
"duration": 1.0,
"texture": ExtResource("12_kckad")
}, {
"duration": 1.0,
"texture": ExtResource("13_oqsb5")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_dsebc")
}, {
"duration": 1.0,
"texture": ExtResource("15_b1ti7")
}, {
"duration": 1.0,
"texture": ExtResource("16_a8r7m")
}, {
"duration": 1.0,
"texture": ExtResource("17_hak8v")
}, {
"duration": 1.0,
"texture": ExtResource("14_dsebc")
}],
"loop": false,
"name": &"shoot",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjcc1"]
size = Vector2(22.5, 37)

[sub_resource type="CircleShape2D" id="CircleShape2D_aehro"]
radius = 89.2329

[node name="cult_memb1" type="CharacterBody2D"]
scale = Vector2(0.4, 0.4)
script = ExtResource("1_wmitl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.5, -2.38419e-07)
sprite_frames = SubResource("SpriteFrames_qjcc1")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.19209e-07, -2.5)
shape = SubResource("RectangleShape2D_qjcc1")

[node name="left" type="RayCast2D" parent="."]
target_position = Vector2(-32.5, 0)
collide_with_areas = true

[node name="right" type="RayCast2D" parent="."]
exclude_parent = false
target_position = Vector2(35, 0)

[node name="d left" type="RayCast2D" parent="."]
position = Vector2(-10, 12.5)
exclude_parent = false
target_position = Vector2(0, 17.5)
collide_with_areas = true

[node name="d right" type="RayCast2D" parent="."]
position = Vector2(7.5, 12.5)
exclude_parent = false
target_position = Vector2(0, 17.5)
collide_with_areas = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(90, 5)
shape = SubResource("CircleShape2D_aehro")

[node name="dire" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="dire" to="." method="_on_dire_timeout"]
